--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "sws-vehicle-history",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://coraleigh.github.io/sws-vehicle-history/",
   "type": "module",
   "scripts": {
     "dev": "vite",
